# redbook

./: .gitignore  LICENSE  pyproject.toml  readme.md
redbook/: __init__.py  fetcher.py  helper.py  model.py  page.py  redbook.py  script.py
redbook/client/: client.py  client_sync.py  help.py  playwright_sign.py
redbook/client_v2/: xhs_util.py
