[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "redbook"
authors = [{name = "BaoHengtao", email = "baohengtao@users.noreply.github.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/baohengtao/redbook"


[project.scripts]
redbook = 'redbook.script:app'
